--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
+    "uuid": "^11.1.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
